--- a/index.html
+++ b/index.html
@@ -47,9 +47,9 @@ cursor:pointer;
 
 <header>
 <h1>🏐 Canchas Vóley Playa</h1>
-<p>Reserva tu cancha cerrada o al aire libre</p>
+<p>Reserva tu cancha techada o al aire libre</p>
 
-<button onclick="window.location.href='PEGA_AQUI_TU_LINK_DEL_FORM'">
+<button onclick="window.location.href='https://forms.gle/52nQ61QVBZFD7q9j8'">
 RESERVAR AHORA
 </button>
 </header>
@@ -63,7 +63,7 @@ Ideal entrenamientos
 </div>
 
 <div class="card">
-<h2>🏠 Cancha cerrada</h2>
+<h2>🏠 Cancha Techada</h2>
 Incluye balón<br>
 Perfecta lluvia o noche
 </div>
