--- a/index.html
+++ b/index.html
@@ -2,71 +2,104 @@
 <html lang="es">
 <head>
 <meta charset="UTF-8">
-<title>Reserva Vóley Playa</title>
+<title>Canchas Vóley Playa</title>
 
 <style>
+
 body{
-font-family: Arial;
 margin:0;
-background:#f5f5f5;
-text-align:center;
+font-family: 'Segoe UI', Arial;
+background:url("https://images.unsplash.com/photo-1507525428034-b723cf961d3e");
+background-size:cover;
+background-attachment:fixed;
+color:white;
+}
+
+.overlay{
+background:rgba(0,0,0,.65);
+min-height:100vh;
 }
 
 header{
-background:#0099cc;
-color:white;
-padding:40px;
+text-align:center;
+padding:80px 20px;
+}
+
+h1{
+font-size:48px;
+margin-bottom:10px;
+}
+
+button{
+background:#00c2ff;
+border:none;
+padding:18px 40px;
+font-size:20px;
+border-radius:30px;
+cursor:pointer;
+box-shadow:0 5px 15px rgba(0,0,0,.4);
 }
 
 .section{
-padding:30px;
+padding:40px 20px;
+display:flex;
+flex-wrap:wrap;
+justify-content:center;
+gap:25px;
 }
 
 .card{
 background:white;
-margin:15px auto;
-padding:20px;
-max-width:400px;
-border-radius:10px;
-box-shadow:0 0 10px rgba(0,0,0,.1);
+color:black;
+padding:25px;
+border-radius:20px;
+width:280px;
+text-align:center;
+box-shadow:0 10px 20px rgba(0,0,0,.4);
 }
 
-button{
-background:#0099cc;
-color:white;
-border:none;
-padding:15px 30px;
-font-size:18px;
-border-radius:8px;
-cursor:pointer;
+footer{
+text-align:center;
+padding:30px;
+opacity:.8;
 }
+
 </style>
 </head>
 
 <body>
 
+<div class="overlay">
+
 <header>
 <h1>🏐 Canchas Vóley Playa</h1>
-<p>Reserva tu cancha techada o al aire libre</p>
+<p>Reserva tu cancha Techada o al aire libre</p>
 
-<button onclick="window.location.href='https://forms.gle/52nQ61QVBZFD7q9j8'">
+<button onclick="window.location.href='https://forms.gle/63bDzi26pR414jyQA'">
 RESERVAR AHORA
 </button>
+
 </header>
 
 <div class="section">
 
 <div class="card">
 <h2>🌴 Cancha al aire libre</h2>
-Incluye balón<br>
-Ideal entrenamientos
+Incluye balón<br><br>
+Ideal para partidos recreativos
 </div>
 
 <div class="card">
 <h2>🏠 Cancha Techada</h2>
-Incluye balón<br>
-Perfecta lluvia o noche
+Incluye balón<br><br>
+Perfecta para lluvia o sesiones nocturnas
 </div>
+
+</div>
+
+<footer>
+© 2026 Vóley Playa
+</footer>
 
 </div>
 
