--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
 body{
 margin:0;
 font-family: 'Segoe UI', Arial;
-background:url("https://images.unsplash.com/photo-1507525428034-b723cf961d3e");
+background:url("fondo.jpg");
 background-size:cover;
 background-attachment:fixed;
 color:white;
@@ -84,16 +84,20 @@ RESERVAR AHORA
 <div class="section">
 
 <div class="card">
+<img src="aire.jpg" width="100%" style="border-radius:15px">
 <h2>🌴 Cancha al aire libre</h2>
 Incluye balón<br><br>
-Ideal para partidos recreativos
+Ideal para entrenamientos y partidos recreativos
 </div>
 
+
 <div class="card">
-<h2>🏠 Cancha Techada</h2>
+<img src="cerrada.jpg" width="100%" style="border-radius:15px">
+<h2>🏠 Cancha techada</h2>
 Incluye balón<br><br>
 Perfecta para lluvia o sesiones nocturnas
 </div>
+
 
 </div>
 
