--- a/index.html
+++ b/index.html
@@ -72,14 +72,26 @@ opacity:.8;
 <div class="overlay">
 
 <header>
-<h1>🏐 Canchas Vóley Playa</h1>
-<p>Reserva tu cancha Techada o al aire libre</p>
 
-<button onclick="window.location.href='https://forms.gle/63bDzi26pR414jyQA'">
+<div style="display:flex;align-items:center;justify-content:center;gap:20px;flex-wrap:wrap">
+
+<img src="logo.jpg" height="80">
+
+<div>
+<h1>Reserva de Canchas</h1>
+<p>Reserva tu cancha Techada o al aire libre</p>
+</div>
+
+</div>
+
+<br>
+
+<button onclick="window.location.href='https://forms.gle/EGbroGkXnAUtBgFr9'">
 RESERVAR AHORA
 </button>
 
 </header>
+
 
 <div class="section">
 
