--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
 body{
 margin:0;
 font-family: 'Segoe UI', Arial;
-background:url("fondo.jpeg");
+background:url("Fondo.jpeg");
 background-size:cover;
 background-attachment:fixed;
 color:white;
@@ -96,7 +96,7 @@ RESERVAR AHORA
 <div class="section">
 
 <div class="card">
-<img src="aire.jpeg" width="100%" style="border-radius:15px">
+<img src="Aire.jpeg" width="100%" style="border-radius:15px">
 <h2>🌴 Cancha al aire libre</h2>
 Incluye balón<br><br>
 Ideal para entrenamientos y partidos recreativos
@@ -104,7 +104,7 @@ Ideal para entrenamientos y partidos recreativos
 
 
 <div class="card">
-<img src="cerrada.jpeg" width="100%" style="border-radius:15px">
+<img src="Techada.jpeg" width="100%" style="border-radius:15px">
 <h2>🏠 Cancha techada</h2>
 Incluye balón<br><br>
 Perfecta para lluvia o sesiones nocturnas
