Add buttons for reserving courts

--- a/index.html
+++ b/index.html
@@ -86,9 +86,16 @@ opacity:.8;
 
 <br>
 
-<button onclick="window.location.href='https://forms.gle/EGbroGkXnAUtBgFr9'">
-RESERVAR AHORA
+<button onclick="window.location.href='LINK_AIRE_LIBRE'">
+RESERVAR CANCHA AIRE LIBRE
 </button>
+
+<br><br>
+
+<button onclick="window.location.href='LINK_TECHADA'">
+RESERVAR CANCHA TECHADA
+</button>
+
 
 </header>
 
