Update button links for court reservations

--- a/index.html
+++ b/index.html
@@ -86,13 +86,13 @@ opacity:.8;
 
 <br>
 
-<button onclick="window.location.href='LINK_AIRE_LIBRE'">
+<button onclick="https://calendar.app.google/JbBKjBax3TaEN4p28">
 RESERVAR CANCHA AIRE LIBRE
 </button>
 
 <br><br>
 
-<button onclick="window.location.href='LINK_TECHADA'">
+<button onclick="https://calendar.app.google/QmPWJXhgx3sksQBZ6">
 RESERVAR CANCHA TECHADA
 </button>
 
