Fix button onclick attributes for redirection

--- a/index.html
+++ b/index.html
@@ -86,13 +86,13 @@ opacity:.8;
 
 <br>
 
-<button onclick="https://calendar.app.google/JbBKjBax3TaEN4p28">
+<button onclick="window.location.href='https://calendar.app.google/JbBKjBax3TaEN4p28'">
 RESERVAR CANCHA AIRE LIBRE
 </button>
 
 <br><br>
 
-<button onclick="https://calendar.app.google/QmPWJXhgx3sksQBZ6">
+<button onclick="window.location.href='https://calendar.app.google/QmPWJXhgx3sksQBZ6'">
 RESERVAR CANCHA TECHADA
 </button>
 
